Javac2007/src/test/attr/error/enum_types_not_extensible.java
package test.attr.error;
enum MyEnum {}
public class enum_types_not_extensible extends MyEnum {}
